--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,17 @@
 [tool.poetry]
 name = "examon"
-version = "0.4.0"
+version = "0.4.1"
 description = ""
 authors = ["Jarrod Folino <jdfolino@icloud.com>"]
 packages = [{include = "examon"}]
-
-[[tool.poetry.source]]
-name = "test"
-url = "https://test.pypi.org/simple/"
-secondary = true
 
 [tool.poetry.dependencies]
 python = "^3.9"
 pygments = "^2.13.0"
 inquirer = "^3.1.1"
 simple-term-menu = "^1.6.1"
-examon-core = "0.5.6"
+examon-core = "1.0.0"
+consolemenu = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.2.1"
