--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ pytest = "7.2.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+quiz = 'examon.view.cli.main:process_command'
