--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ python = "^3.9"
 pygments = "^2.13.0"
 inquirer = "^3.1.1"
 simple-term-menu = "^1.6.1"
-examon-core = "1.0.0"
+examon-core = "1.0.4"
 consolemenu = "^1.0.1"
+dataclasses-serialization = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.2.1"
