--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:////tmp/examon.db
+sqlalchemy.url = sqlite:///resources/examon.db
 
 
 [post_write_hooks]
