--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,3 +38,13 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest
+  verify_pip_install:
+    runs-on: ubuntu-latest
+    steps:
+      - name: install
+        run: |
+          python -m pip install --upgrade pip
+          pip install examon
+          examon package init
+          examon package list
+          
